--- a/styles.css
+++ b/styles.css
@@ -2,17 +2,17 @@
 *::before,
 *::after {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 /* Base styles */
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: 'DM Sans', sans-serif;
     font-weight: 300;
     color: rgba(18, 20, 16, 1);
-    margin: 0;
-    background: linear-gradient(to bottom right, rgba(210, 235, 255, 1), rgba(242, 239, 255, 1), rgba(241, 255, 223, 0.3));
+    background: white;
     display: flex;
-    min-height: 100vh;
     flex-direction: column;
     line-height: 1.6;
 }
@@ -20,6 +20,7 @@ body {
 
 h1, h2 {
   font-weight: 700;
+  line-height: 1.3;
 }
 
 p {
@@ -42,7 +43,7 @@ ul {
 }
 
 header {
-    background-color: transparent;
+    background-color: rgba(210, 235, 255, 1);
 }
 
 .spacer {
@@ -107,16 +108,11 @@ header {
     color: white;
 }
 
-.consultation:hover, .consultation:active {
-    color: black;
-}
-
-
 .mobile-menu-toggle {
     display: none;
     background: none;
     border: none;
-    cursor: pointer; /* Indicate that it's clickable */
+    cursor: pointer; 
 }
 
 .mobile-nav {
@@ -128,12 +124,12 @@ header {
 }
 
 .mobile-nav ul {
-    list-style: none; /* Remove default list styling */
-    padding: 0; /* Remove padding */
-    margin: 0; /* Remove margin */
-    display: flex; /* Display links in a column */
-    flex-direction: column; /* Stack links vertically */
-    gap: 1rem; /* Add spacing between links */
+    list-style: none; 
+    padding: 0; 
+    margin: 0;
+    display: flex; 
+    flex-direction: column; 
+    gap: 1rem; 
     }
 
 .mobile-nav a {
@@ -193,17 +189,21 @@ main {
 .hero-content {
     margin: 3rem auto;
     padding: 0 1rem;
-    text-align: center;
     max-width: 1200px; 
+    text-align: center;
 }
 
-.hero-content h1 {
-    font-size: 4rem; /* Large heading */
+.hero-content h1, h2 {
+    font-size: 4rem;
+    line-height: 1.3;
     margin-bottom: 1rem;
+    
 }
 
 .hero-content p {
     font-size: 1rem;
+    margin-bottom: 1rem;
+    text-align: left;
 }
 
 .brief-bio {
@@ -232,12 +232,12 @@ main {
 
 .brief-bio__bio h2 {
     font-size: 1rem;
-    letter-spacing: 3px;
     margin-bottom: 0.5rem;
 }
 
 .brief-bio__bio p {
     font-size: 1rem;
+    margin-bottom: 1rem;
 }
 
 @media (max-width: 768px) {
@@ -247,7 +247,7 @@ main {
 }
 
 .project {
-  background-color: rgba(255, 255, 255, 1);
+  background-color: white;
   margin-top: 2rem;
 }
 
@@ -375,7 +375,159 @@ main {
             vertical-align: middle;
         }
 
+/* Superpower Section Styles */
+    .work-info {
+      background-color: #f4f4f4;
+      border: 1px solid transparent;
+      flex-grow: 1;
+    }
 
+    .content-box {
+      max-width: 1200px;
+      margin: 1rem auto;
+      padding: 1rem;
+      border-radius: 8px;
+      background-color: transparent;
+    }
+
+    .content-header {
+      display: flex;
+      align-items: center;
+      margin-bottom: 10px;
+    }
+
+    .expand-icon {
+      width: 30px;
+      height: 30px;
+      border-radius: 50%;
+      background-color: rgba(255, 2, 222, 1);
+      color: rgba(18, 20, 16, 1);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      margin-right: 10px;
+      transition: background-color 0.3s ease;
+      font-size: 20px;
+      font-weight: bold;
+      text-align: center;
+    }
+
+    .expand-icon::before {
+      content: '+';
+    }
+
+    .expand-icon.expanded::before {
+      content: '-';
+    }
+
+    .section-heading {
+      font-size: 2rem;
+      margin: 0;
+    }
+
+    .content-section {
+      display: block;
+      font-size: 1rem;
+    }
+    
+    .content-section p {
+      margin-bottom: 1rem;
+    }
+
+    .content-section.hide {
+      display: none;
+    }
+
+        .graphic-designs {
+            padding: 1rem;
+            max-width: 1200px;
+            margin: 0 auto;
+            text-align: center;
+        }
+
+        /* Heading styling */
+        .graphic-designs h2 {
+            font-size: 4rem;
+            margin-bottom: 20px;
+        }
+
+        /* Grid styling */
+        .design-grid {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 20px;
+        }
+
+        /* Grid items styling */
+        .design-item {
+            position: relative;
+            overflow: hidden;
+            border: 1px solid #ddd;
+            transition: transform 0.2s ease-in-out;
+        }
+
+        .design-item img {
+            width: 100%;
+            max-width: 1080px;
+            height: auto;
+            display: block;
+            transition: transform 0.3s ease-in-out;
+        }
+
+        .design-item:hover img {
+            transform: scale(1.05);
+        }
+
+        /* CTA styling */
+        .design-cta {
+            display: inline-flex;
+            align-items: center;
+            margin-top: 30px;
+            padding: 0.5rem 1rem;
+            border-radius: 25px;
+            background: rgba(255, 2, 222, 1);
+    color: white;
+            color: white;
+            text-decoration: none;
+            font-size: 16px;
+            font-weight: bold;
+            transition: color 0.2s ease-in-out;
+        }
+
+        .design-cta:hover {
+            color: #0056b3;
+        }
+
+        .design-cta img {
+            width: 16px;
+            height: 16px;
+            margin-left: 8px;
+            transition: transform 0.2s ease-in-out;
+        }
+
+        .design-cta:hover img {
+            transform: translateX(5px);
+        }
+
+        /* Responsive styling */
+        @media (max-width: 768px) {
+            .design-grid {
+                grid-template-columns: 1fr;
+            }
+            
+      .graphic-designs {
+        text-align: left;
+      }
+      
+      .graphic-designs h2 {
+        font-size: 2.5rem;
+      }
+            .design-item img {
+              height: auto;
+            }
+        }
+    
 /* Services section */
 .services {
     width: 100%;
@@ -405,7 +557,7 @@ main {
 
 .services-image img {
     width: 450px;
-    height: 400px;
+    height: auto;
     object-fit: cover; 
     border-radius: 15px;
 }
@@ -419,9 +571,7 @@ main {
 }
 
 .services-description h2 {
-    font-size: 1rem;
-    letter-spacing: 3px;
-    font-weight: 700;
+    font-size: 2.5rem;
     margin-bottom: 0.5rem;
 }
 
@@ -488,7 +638,6 @@ main {
 
     .services-image img {
       width: 100%;
-      height: 300px;
     }
     
     .services-description {
@@ -500,7 +649,7 @@ main {
 footer {
     padding: 3rem 1rem;
     color: rgba(18, 20, 16, 1);
-    background: transparent;
+    background: rgba(210, 235, 255, 1);
 }
 
 .footer-container {
@@ -584,7 +733,7 @@ footer {
 
 .footer-bottom p, .footer-bottom a {
   margin: 0;
-  font-size: 1.5rem;
+  font-size: 0.7rem;
 }
 
 .footer-bottom a {
@@ -612,11 +761,11 @@ footer {
     }
 
     .mobile-nav[aria-hidden="false"] {
-        display: flex; /* Show mobile menu when active */
+        display: flex; 
     }
     
-    .hero-content h1 {
-      font-size: 1.5rem;
+    .hero-content h1, h2 {
+      font-size: 2.5rem;
     }
     
     .project-snippet__button {
@@ -625,10 +774,6 @@ footer {
     
     .footer-container {
         flex-direction: column; /* Stack footer columns on mobile */
-    }
-    
-    .footer-bottom p, .footer-bottom a {
-      font-size: 0.7rem;
     }
 }
 
@@ -649,4 +794,5 @@ footer {
     .footer-column {
         flex: 1 1 20%; /* Four columns on desktop */
     }
-}
+    }
+    
